[package]
name = "pone_drvcar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log4rs = "1.3.0"
log = "0.4.0"
serde = "1.0.203"
tokio = { version = "1.38", features = ["full"] }
uhid-virt = "0.0.7"
bluer = { version = "0.17.2", features = ["full"] }
futures = "0.3.30"
binary-layout = "4.0.2"
strum_macros = "0.26.4"

[target.x86_64-unknown-linux-gnu]
llvm-config = "/usr/bin/llvm-config-18"
